[gd_scene load_steps=4 format=3 uid="uid://dlfjn02xekh68"]

[ext_resource type="Script" path="res://scripts/prefabs_scripts/door.gd" id="1_6l8cy"]
[ext_resource type="Texture2D" uid="uid://dyvppfcwvtg8e" path="res://assets/room/door_upper.png" id="1_nkcrn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wicuy"]
size = Vector2(20, 5)

[node name="door" type="Area2D"]
collision_layer = 64
collision_mask = 2
script = ExtResource("1_6l8cy")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(0.25, 0)
scale = Vector2(0.990196, 1)
texture = ExtResource("1_nkcrn")

[node name="door_collisor" type="CollisionShape2D" parent="."]
position = Vector2(0, 18.5)
shape = SubResource("RectangleShape2D_wicuy")

[node name="room_spawn" type="Marker2D" parent="."]
position = Vector2(0, -191)

[node name="door_detector" type="RayCast2D" parent="."]
target_position = Vector2(0, -100)
collision_mask = 64
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
